--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -3,4 +3,4 @@ project(Casino)
 
 set(CMAKE_CXX_STANDARD 14)
 
-add_executable(Casino main.cpp Deck.cpp Deck.h Card.cpp Card.h)
+add_executable(Casino main.cpp Deck.cpp Deck.h Card.cpp Card.h Blackjack.cpp Blackjack.h)
